# Compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
BackEnd/: CMakeLists.txt  main.cpp
BackEnd/inc/: asm_gl_space_proc.h  ast_translator.h  backend_args_proc.h  backend_structs.h  backend_utils.h  sections_processing.h  stack_frame_proc.h
BackEnd/libs/AST_lib/: CMakeLists.txt
BackEnd/libs/AST_lib/inc/: AST_proc.h
BackEnd/libs/general_lib/inc/: general.h
BackEnd/libs/graphviz_funcs/inc/: graphviz_funcs.h
BackEnd/libs/stack/inc/: stack_output.h
BackEnd/libs/string_funcs/: CMakeLists.txt
BackEnd/libs/string_funcs/src/: string_funcs.cpp
BackEnd/src/: asm_gl_space_proc.cpp  ast_translator.cpp  backend_args_proc.cpp  backend_utils.cpp  sections_proc.cpp
FrontEnd/: CMakeLists.txt  code.mcc  main.cpp
FrontEnd/inc/: FrontEnd.h  front_args_proc.h
FrontEnd/libs/AST_lib/inc/: AST_structs.h  diff_DSL.h
FrontEnd/libs/AST_lib/src/: AST_io.cpp  AST_proc.cpp
FrontEnd/libs/general_lib/src/: general.cpp
FrontEnd/libs/graphviz_funcs/: CMakeLists.txt
FrontEnd/libs/graphviz_funcs/src/: graphviz_funcs.cpp
FrontEnd/libs/string_funcs/inc/: string_funcs.h
FrontEnd/src/: FrontEnd.cpp  front_args_proc.cpp  lang_lexer.cpp
libs/ASTio/: CMakeLists.txt
libs/ASTio/inc/: AST_io.h  AST_proc.h
libs/ASTio/src/: AST_io.cpp  AST_proc.cpp
libs/BackEnd/: CMakeLists.txt  main.cpp
libs/BackEnd/inc/: BackEnd.h  ast_translator.h  ast_translator__OLD.h  sections_processing.h  stack_frame_proc.h  strong_type_proc.h  translator_general.h  translator_structs.h
libs/BackEnd/src/: BackEnd.cpp  ast_translator.cpp  ast_translator__OLD.cpp  sections_proc.cpp  stack_frame_proc.cpp  strong_type_proc.cpp  translator_general.cpp
libs/FrontEnd/: CMakeLists.txt  main.cpp
libs/FrontEnd/inc/: AST_io.h  AST_proc.h  AST_structs.h  FrontEnd.h  diff_DSL.h  lang_grammar.h  lang_lexer.h  lang_logger.h
libs/FrontEnd/src/: AST_io.cpp  AST_proc.cpp  FrontEnd.cpp  lang_grammar.cpp  lang_lexer.cpp  lang_logger.cpp
libs/elf_translator/: CMakeLists.txt
libs/elf_translator/inc/: elf_gen.hpp  segments_gen.hpp
libs/elf_translator/src/: elf_gen.cpp  elf_header_gen.cpp  segments_gen.cpp
libs/general_lib/: CMakeLists.txt
libs/general_lib/inc/: general.h
libs/general_lib/src/: general.cpp
libs/graphviz_funcs/: CMakeLists.txt
libs/graphviz_funcs/src/: graphviz_funcs.cpp
libs/my_linker/: CMakeLists.txt
libs/my_linker/docs/: backlog
libs/my_linker/src/: compiler_artifacts_proc.cpp
libs/stack/: CMakeLists.txt
libs/stack/inc/: stack_err_proc.h
libs/stack/src/: stack_err_proc.cpp  stack_output.cpp
libs/string_funcs/inc/: general.h  string_funcs.h
libs/string_funcs/src/: string_funcs.cpp
logs/: graph.dot
source/ASTio/: CMakeLists.txt
source/elf_translator/inc/: elf_header_gen.hpp  general.hpp
source/elf_translator/src/: elf_gen.cpp  elf_header_gen.cpp  general.cpp
source/graphviz_funcs/: CMakeLists.txt
source/graphviz_funcs/inc/: general.h
source/my_linker/inc/: compiler_artifact_structs.hpp
source/stack/inc/: general.h  stack_funcs.h  stack_output.h
source/stack/src/: stack_err_proc.cpp  stack_funcs.cpp
source/string_funcs/: CMakeLists.txt
standart_lib/: .data  .text  standart_library.asm
